--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* ИМПОРТИРОВАНИЕ ШРИФТОВ */
-
 @import url('https://fonts.googleapis.com/css2?family=Khula&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Karma:wght@500;700&display=swap');
 
@@ -7,65 +5,73 @@
 
 body {
     font-family: "Khula";
+    color: #000;
+    /* align-items: center;
+    justify-content: center; */
 }
 
 .container {
     text-align: center;
-    margin-left: 10px;
-    margin-right: 10px;
-    align-items: center;
-    justify-content: center;
 }
 
-/* PAGE-1  -------------------*/
+/* PAGE-1 */
 
 .title {
     font-family: Karma;
     font-size: 20px;
     font-weight: 700;
-    padding-top: 55px;
+    padding-top: 20px;
 }
 
 .subtitle {
     font-family: Karma;
     font-size: 40px;
     font-weight: 700;
-    /* padding-top: 100px; */
 }
 
-/* .main-video {
-    border-radius: 10px;
-    background: linear-gradient(0deg, rgba(255, 255, 255, 0.08) 0%, rgba(255, 255, 255, 0.08) 100%), url(<path-to-image>), lightgray 50% / cover no-repeat;
-    box-shadow: -1px 20px 50px 0px rgba(0, 0, 0, 0.42);
-} */
-
-.main-content p {
+.drop-down-content {
     width: 316px;
-    height: 896px;
+    height: 93px;
+    flex-shrink: 0;
     color: #3C3C3C;
     font-family: Khula;
     font-size: 16px;
     font-weight: 400;
 }
 
-.button-open {
+.drop-down__button {
     display: inline-flex;
-    padding: 4px 26px 3px 25px;
-    justify-content: center;
+    padding: 6px 10px 1px 16px;
+    justify-content: flex-end;
     align-items: center;
     border-radius: 20px;
     background: #FFF;
     box-shadow: 0px 5px 20px 0px rgba(66, 66, 66, 0.25);
-    color: #000;
+    /* left: -50%; */
+    display: flex;
+    margin-left: auto;
+    margin-right: 30px;
+}
+
+.drop-down__button-text {
     font-family: Karma;
     font-size: 14px;
     font-weight: 700;
-    margin-top: 40px;
-    margin-left: 200px;
-    margin-bottom: 30px;
 }
 
-.button {
+.first-button__text {
+    font-family: Karma;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.second-button__text {
+    font-family: Karma;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.first-version__button {
     display: inline-flex;
     height: 46px;
     padding: 11px 102px 10px 100px;
@@ -75,18 +81,11 @@ body {
     border-radius: 10px;
     background: #FFF;
     box-shadow: 0px 4px 25px 0px rgba(72, 72, 72, 0.25);
+    margin-bottom: 20px;
+    margin-top: 50px;
 }
 
-.button-text {
-    font-family: Karma;
-    font-size: 20px;
-    font-weight: 700;
-    width: 128px;
-    height: 25px;
-}
-
-.button2 {
-    /* display: flex; */
+.second-version__button {
     width: 330px;
     height: 46px;
     padding: 11px 86px 10px 86px;
@@ -96,14 +95,16 @@ body {
     border-radius: 10px;
     background: #FFF;
     box-shadow: 0px 4px 25px 0px rgba(72, 72, 72, 0.25);
-    margin-top: 30px;
     margin-bottom: 140px;
 }
 
 
 
 
-/* PAGE-2  -------------------*/
+
+
+
+/* PAGE-2 */
 
 .main-title {
     display: flex;
@@ -116,43 +117,78 @@ body {
     border-radius: 10px;
     background: #F3F3F3;
     box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.42);
-    margin-top: 40px;
+    margin: 0 auto;
+    margin-top: 25px;
+    margin-bottom: 50px;
 }
 
-.main-text {
-    width: 324px;
-    height: 108px;
-    flex-shrink: 0;
-    color: #000;
+.main-title__text {
     text-align: center;
     font-family: Karma;
     font-size: 24px;
-    font-style: normal;
     font-weight: 500;
-    line-height: normal;
 }
 
-.main-pic {
-    padding-top: 30px;
-    padding-bottom: 70px;
+.small-button {
+    width: 330px;
+    height: 46px;
+    padding: 11px 0px 10px 0px;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 0px 4px 25px 0px rgba(72, 72, 72, 0.25);
+    margin-bottom: 60px;
 }
-
-
-/* PAGE-3  -------------------*/
-
 
 .dog-pic {
-    position: absolute;
-    margin-left: 90px;
-    margin-top: 180px;
+    margin-bottom: 85px;
 }
 
-.text {
-    margin-top: 60px;
+.small-button__text {
+    font-family: Karma;
+    font-size: 20px;
+    font-weight: 700;
 }
 
-.button-intermediary {
+
+/* PAGE-3 */
+
+.small-main-title {
     display: flex;
+    width: 360px;
+    height: 92px;
+    padding: 10px 18px;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    border-radius: 10px;
+    background: #F3F3F3;
+    box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.42);
+    margin: 0 auto;
+    margin-top: 25px;
+}
+
+.small-main-title__text {
+    text-align: center;
+    font-family: Karma;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.dog-behind {
+    position: absolute;
+    padding-top: 200px;
+    padding-left: 70px;
+}
+
+.bottom-pic {
+    margin-top: 20px;
+    margin-bottom: 120px;
+}
+
+.back-button {
     width: 128px;
     height: 50px;
     padding: 13px 35px 13px 36px;
@@ -162,93 +198,87 @@ body {
     border-radius: 20px;
     background: #FFF;
     box-shadow: 0px 5px 20px 0px rgba(76, 76, 76, 0.25);
-    margin-bottom: 40px;
+    margin-right:70px;
 }
 
-.intermediary-buttons {
+.next-button {
+    width: 128px;
+    height: 50px;
+    padding: 13px 35px 13px 36px;
     justify-content: center;
-    text-align: center;
-    display: flex;
-    gap: 70px;
-    margin-top: 40px;
-}
-
-/* PAGE-4  -------------------*/
-
-.intermediary-text {
-    width: 316px;
-    height: 784px;
+    align-items: center;
     flex-shrink: 0;
-    color: #3C3C3C;
-    font-family: Khula;
-    font-size: 16px;
-    font-weight: 400;
+    border-radius: 20px;
+    background: #FFF;
+    box-shadow: 0px 5px 20px 0px rgba(76, 76, 76, 0.25);
 }
 
-/* .pic {
-    position: fixed;
-    bottom: 0;
-    left: 50%;
-    transform: translate(-50%, 0);
-    z-index: 10;
-    background-color: #fff;
-
-} */
-
-/* .button-open {
-    position: fixed;
-    bottom: 0;
-    left: 50%;
-    transform: translate(-50%, 0);
-    z-index: 10;
-    background-color: #fff;
-} */
-
-/* PAGE-5  -------------------*/
-
-
-
-
-
-
-/* PAGE-6  -------------------*/
-
-
-
-
-
-/* PAGE-7  -------------------*/
-
-.pic {
-    margin-bottom: 80px;
-}
-
-
-
-
-/* PAGE-8  -------------------*/
-
-.pic-bottom {
-    margin-bottom: 180px;
-}
-
-/* PAGE-9  -------------------*/
-
-.menu-title {
-    width: 104px;
-    height: 44px;
-    flex-shrink: 0;
-    color: #000;
+.back-button span { 
     font-family: Karma;
-    font-size: 36px;
+    font-size: 20px;
     font-weight: 700;
 }
 
-.main-title-second {
+.next-button span {
+    font-family: Karma;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.intermediary-button {
+    margin-bottom: 15px;
+}
+
+/* PAGE-5 */
+
+.scroll-text {
+    color: #3C3C3C;
+    font-family: Khula;
+    font-size: 16px;
+    font-weight: 400;   
+}
+
+/* PAGE-6 */
+
+
+
+
+
+
+
+
+
+
+/* PAGE-7 */
+
+.bottom-pic-big {
+    margin-top: 40px;
+    margin-bottom: 170px;
+}
+
+
+/* PAGE-8 */
+
+.bigest-bottom-pic {
+    padding-top: 90px;
+    padding-bottom: 200px;
+}
+
+/* PAGE-9 */
+
+.menu-title {
+    font-family: Karma;
+    font-size: 36px;
+    font-weight: 700;
+    /* padding-top: 20px; */
+}
+
+.biggest-main-title {
     display: flex;
+    margin: 0 auto;
     width: 360px;
     height: 128px;
-    /* padding: 10px 18px; */
+    padding: 10px 18px;
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
@@ -257,7 +287,14 @@ body {
     box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.42);
 }
 
-.big-button {
+.biggest-main-title span {
+    text-align: center;
+    font-family: Karma;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.kostakis-button {
     display: inline-flex;
     padding: 18px 48px 10px 49px;
     justify-content: center;
@@ -268,60 +305,70 @@ body {
     margin-top: 40px;
 }
 
-.big-button-text {
-    color: #000;
+.kostakis-button span {
     text-align: center;
     font-family: Karma;
     font-size: 40px;
     font-weight: 500;
 }
 
-.menu__card {
-    width: 170px;
+.kostakis-cards {
+    display: grid;
+    grid-template-columns: repeat(2, 170px);
+    grid-template-rows: auto;
+    gap: 20px;
+    margin-left: 15px;
+}
+
+.cards-shell {
+    max-width: 170px;
     height: 230px;
-    flex-shrink: 0;
     border-radius: 10px;
     background: #FFF;
     box-shadow: -1px 20px 35px 0px rgba(0, 0, 0, 0.42);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 12px;
     margin-top: 40px;
-    justify-content: center;
-    text-align: center;
 }
 
-.card-title {
+.cards-image {
+    /* width: 150px; */
+    /* height: 150px; */
+    /* object-fit: cover; */
+    /* aspect-ratio: 1/1; */
+    /* border-radius: 10px; */
+    overflow:hidden;
+    /* margin-top: 40px; */
+    /* padding-bottom: 40px; */
+}
+
+.cards-title {
     color: #000;
     text-align: center;
     font-family: Karma;
     font-size: 20px;
     font-weight: 700;
-    position: absolute;
-    /* padding-right: 400px; */
-    padding-top: 165px;
-    padding-left: 15px;
+    /* margin-top: 9px; */
+    /* margin-top: 20px; */
 }
 
-.card-subtitle {
+.cards-subtitle {
     color: #949393;
     text-align: center;
-    font-family: Khula;
+    font-family: Karma;
     font-size: 16px;
     font-weight: 700;
-    position: absolute;
-    padding-top: 190px;
-    padding-left: 25px;
 }
 
 
-/* PAGE-10  ------------------- */
+/* PAGE-10 */
 
-.big-dog-pic {
-    padding-top: 90px;
-    z-index: 0;
-    /* position: absolute; */
-}
-
-.card-button {
+.big-button {
     display: flex;
+    margin: 0 auto;
+    margin-top: 160px;
     width: 276px;
     padding: 21px 93px 13px 94px;
     justify-content: center;
@@ -329,8 +376,176 @@ body {
     border-radius: 20px;
     background: #FFF;
     box-shadow: 5px 15px 30px 0px rgba(0, 0, 0, 0.40);
-    position: relative;
-    z-index: 1;
-    margin-top: 00px;
-    margin-left: 40px;
+}
+
+.big-button span {
+    color: #000;
+    text-align: center;
+    font-family: Karma;
+    font-size: 40px;
+    font-weight: 500;
+}
+
+.arrow-back__button {
+    display: flex;
+    margin-right: auto;
+}
+
+.menu-button-back {
+    display: flex;
+    width: 128px;
+    height: 50px;
+    padding: 13px 35px 13px 36px;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    border-radius: 20px;
+    background: #FFF;
+    box-shadow: 0px 5px 20px 0px rgba(76, 76, 76, 0.25);
+    margin-top: 15px;
+}
+
+.menu-button-back span {
+    color: #000;
+    font-family: Karma;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.back-buttons {
+    justify-content: center;
+    display: flex;
+    margin-top: 40px;
+    gap: 140px;
+}
+
+
+
+/* PAGE-11 */
+
+.game-pic {
+    margin-top: 40px;
+}
+
+.headline-title {
+    color: #000;
+    text-align: center;
+    font-family: Karma;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.headline-subtitle {
+    color: #B1B1B1;
+    text-align: center;
+    font-family: Khula;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.first-select-button {
+    width: 330px;
+    height: 46px;
+    padding: 11px 109px 10px 108px;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 0px 4px 25px 0px rgba(72, 72, 72, 0.25);
+    margin-top: 30px;
+}
+
+.first-select-button span {
+    color: #000;
+    font-family: Karma;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.second-select-button {
+    width: 330px;
+    height: 46px;
+    padding: 10px 0px;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 0px 4px 25px 0px rgba(72, 72, 72, 0.25);
+    margin-top: 24px;
+}
+
+.second-select-button span {
+    color: #000;
+    font-family: Karma;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.third-select-button {
+    width: 330px;
+    height: 46px;
+    padding: 11px 31px 10px 30px;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 0px 4px 25px 0px rgba(72, 72, 72, 0.25);
+    margin-top: 24px;
+    margin-bottom: 85px;
+}
+
+.third-select-button span {
+    color: #000;
+    font-family: Karma;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.select-buttons {
+    margin-top: 100px;
+}
+
+.small-dog-pic {
+    position: absolute;
+    display: flex;
+}
+
+/* PAGE-12 */
+
+.add-bottom {
+    margin-top: 40px;
+}
+
+.first-text {
+    color: #000;
+    font-family: Khula;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.second-text {
+    color: #000;
+    font-family: Khula;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-bottom: 100px;
 }
