--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
 /* PAGE-1 */
 
 .title {
+    color: #000;
     font-family: Karma;
     font-size: 20px;
     font-weight: 700;
@@ -24,6 +25,7 @@ body {
 }
 
 .subtitle {
+    color: #000;
     font-family: Karma;
     font-size: 40px;
     font-weight: 700;
@@ -60,12 +62,14 @@ body {
 }
 
 .first-button__text {
+    color: #000;
     font-family: Karma;
     font-size: 20px;
     font-weight: 700;
 }
 
 .second-button__text {
+    color: #000;
     font-family: Karma;
     font-size: 20px;
     font-weight: 700;
@@ -107,6 +111,7 @@ body {
 /* PAGE-2 */
 
 .main-title {
+    color: #000;
     display: flex;
     width: 360px;
     height: 128px;
@@ -123,6 +128,7 @@ body {
 }
 
 .main-title__text {
+    color: #000;
     text-align: center;
     font-family: Karma;
     font-size: 24px;
@@ -147,6 +153,7 @@ body {
 }
 
 .small-button__text {
+    color: #000;
     font-family: Karma;
     font-size: 20px;
     font-weight: 700;
@@ -171,6 +178,7 @@ body {
 }
 
 .small-main-title__text {
+    color: #000;
     text-align: center;
     font-family: Karma;
     font-size: 24px;
@@ -214,12 +222,14 @@ body {
 }
 
 .back-button span { 
+    color: #000;
     font-family: Karma;
     font-size: 20px;
     font-weight: 700;
 }
 
 .next-button span {
+    color: #000;
     font-family: Karma;
     font-size: 20px;
     font-weight: 700;
@@ -267,6 +277,7 @@ body {
 /* PAGE-9 */
 
 .menu-title {
+    color: #000;
     font-family: Karma;
     font-size: 36px;
     font-weight: 700;
@@ -288,6 +299,7 @@ body {
 }
 
 .biggest-main-title span {
+    color: #000;
     text-align: center;
     font-family: Karma;
     font-size: 24px;
@@ -306,6 +318,7 @@ body {
 }
 
 .kostakis-button span {
+    color: #000;
     text-align: center;
     font-family: Karma;
     font-size: 40px;
@@ -317,7 +330,6 @@ body {
     grid-template-columns: repeat(2, 170px);
     grid-template-rows: auto;
     gap: 20px;
-    margin-left: 15px;
 }
 
 .cards-shell {
@@ -437,6 +449,7 @@ body {
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+    padding-top: 40px;
 }
 
 .headline-subtitle {
@@ -548,4 +561,88 @@ body {
     font-weight: 400;
     line-height: normal;
     margin-bottom: 100px;
+}
+
+/* PAGE-13 */
+
+
+/* PAGE-14  */
+
+
+.text-bottom {
+    margin-bottom: 220px;
+}
+
+/* PAGE-15 */
+
+.instagram {
+    margin: 0 auto;
+    width: 360px;
+    height: 183px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    background: #F3F3F3;
+    box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.42);
+    margin-top: 40px;
+}
+
+.instagram-title {
+    color: #000;
+    text-align: center;
+    font-family: Karma;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    justify-content: center;
+    gap: 10px;
+    display: flex;
+    align-items: center;
+    padding-top: 10px;
+}
+
+.instagram-subtitle {
+    color: #000;
+    font-family: Khula;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+.browser {
+    margin: 0 auto;
+    display: inline-flex;
+    padding: 11px 44px 11px 18px;
+    align-items: center;
+    border-radius: 10px;
+    background: #F3F3F3;
+    box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.42);
+    margin-top: 50px;
+    justify-content: center;
+    align-items: center;
+}
+
+.browser-title {
+    color: #000;
+    text-align: center;
+    font-family: Karma;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.browser img {
+    padding-right: 10px;
+}
+
+.one-back-button {
+    /* display: flex; */
+    text-align: left;
+    margin-top: 400px;
+    margin-left: 20px;
 }
